# LLVM-Projects

./: README.md
ops_counts/: CMakeLists.txt  ReadME.md  device.ll  device_inst.bc  device_inst.cubin  device_inst.ll  device_inst.ptx  main  pass.cpp
ops_counts/LLVM-Projects/: README.md
ops_counts/test/: device.cu  host.cu
